--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <html>
 	<head>
 		<title>Santacodes</title>
+		<link rel="icon" href="./favicon.ico" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span class="icon solid major fa-cloud"></span>
+					<span><img src="./images/header.png"></span>
 					<h1>Hey There! I'm <strong>Santhosh</strong> and I love programming!<br />
 					Checkout my <a href="#three">Stuff</a>.</h1>
 					<ul class="actions special">
@@ -36,7 +37,7 @@
 							<p>An Open Source Discord Moderation Bot with feature like auto-roles, react roles, modmail, moderation tools and much more...<p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/ardox.png" alt="Ardox" style="max-height: 250px; object-fit: contain;"  /></span>
 						</div>
 					</div>
 				</div>
@@ -54,7 +55,8 @@
 						<p>A Python Script which joins Zoom Meetings on time<p>
 					</div>
 					<div class="col-6 col-12-medium imp-medium">
-						<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/zac.png" alt="Zoom Auto Cconnect"
+									style="max-height: 250px; object-fit: contain;" /></span>
 					</div>
 				</div>
 			</div>
@@ -72,7 +74,8 @@
 						<p>The Source Code for this Website<p>
 					</div>
 					<div class="col-6 col-12-medium imp-medium">
-						<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/web.png" alt="Ardox"
+									style="max-height: 250px; object-fit: contain;" /></span>
 					</div>
 				</div>
 			</div>
@@ -89,21 +92,23 @@
 					</header>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/fiverr.webp" alt="Fiverr" style="max-height: 110px; object-fit: contain;" /></span>
 							<h3>Fiverr</h3>
 							<ul class="actions special">
 								<li><a href="https://www.fiverr.com/santacodes?public_mode=true" class="button">Visit</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/linkedin.png" alt="Ardox"
+									style="max-height: 220px; object-fit: contain;" /></span>
 							<h3>LinkedIn</h3>
 							<ul class="actions special">
 								<li><a href="https://www.linkedin.com/in/santhosh-sundaram-897324204" class="button">Visit</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/github.png" alt="Ardox"
+									style="max-height: 2240px; object-fit: contain;" /></span>
 							<h3>GitHub</h3>
 							<ul class="actions special">
 								<li><a href="https://github.com/santacodes" class="button">Visit</a></li>
@@ -435,7 +440,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<section id="footer">
 				<ul class="icons">
 					<li><a href="https://github.com/santacodes" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="mailto:santhoshsundaram9650@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				
 			</section>
