--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 				<div class="row gtr-150">
 					<div class="col-6 col-12-medium">
 						<header class="major">
-							<h2><a href="https://github.com/santacodes/santacodes">This Website</a><br />
+							<h2><a href="https://github.com/santacodes/socketchat">SocketChat</a><br />
 							</h2>
 						</header>
-						<p>The Source Code for this Website<p>
+						<p>Chat CLI scrpit using Python and Socket<p>
 					</div>
 					<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/web.png" alt="Ardox"
