--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload">
+	<body class="is-preload" style="background-color: #36454f;">
 
 		<!-- Header -->
-			<section id="header">
+			<section id="header" >
 				<div class="inner">
 					<span><img src="./images/header.png"></span>
 					<h1>Hey There! I'm <strong>Santhosh</strong> and I love programming!<br />
@@ -26,7 +26,7 @@
 			</section>
 
 		<!-- One -->
-			<section id="one" class="main style1">
+			<section id="one" class="main style1" >
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
@@ -93,7 +93,7 @@
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/fiverr.webp" alt="Fiverr" style="max-height: 110px; object-fit: contain;" /></span>
-							<h3>Fiverr</h3>
+							<h3 style="color: #fff;">Fiverr</h3>
 							<ul class="actions special">
 								<li><a href="https://www.fiverr.com/santacodes?public_mode=true" class="button">Visit</a></li>
 							</ul>
@@ -101,7 +101,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/linkedin.png" alt="Ardox"
 									style="max-height: 220px; object-fit: contain;" /></span>
-							<h3>LinkedIn</h3>
+							<h3 style="color: #fff;">LinkedIn</h3>
 							<ul class="actions special">
 								<li><a href="https://www.linkedin.com/in/santhosh-sundaram-897324204" class="button">Visit</a></li>
 							</ul>
@@ -109,9 +109,9 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/github.png" alt="Ardox"
 									style="max-height: 2240px; object-fit: contain;" /></span>
-							<h3>GitHub</h3>
+							<h3 style="color: #fff;">GitHub</h3>
 							<ul class="actions special">
-								<li><a href="https://github.com/santacodes" class="button">Visit</a></li>
+								<li><a href="https://github.com/santacodes" class="button" >Visit</a></li>
 							</ul>
 						</div>
 					</div>
