--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					</header>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/fiverr.webp" alt="Fiverr" style="max-height: 110px; object-fit: contain;" /></span>
+							<span class="image fit"><img src="images/fiverr.png" alt="Fiverr" style="max-height: 110px; object-fit: contain;" /></span>
 							<h3 style="color: #fff;">Fiverr</h3>
 							<ul class="actions special">
 								<li><a href="https://www.fiverr.com/santacodes?public_mode=true" class="button">Visit</a></li>
