--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 							</header>
 							<p>An Open Source Discord Moderation Bot with feature like auto-roles, react roles, modmail, moderation tools and much more...<p>
 						</div>
-						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/ardox.png" alt="Ardox" style="max-height: 250px; object-fit: contain;"  /></span>
+						<div class="col-6 col-12-medium imp-medium,img-hover-zoom--brightness img">
+							<a href="https://github.com/santacodes/ardox"><span class="image fit"><img src="images/ardox.png" alt="Ardox" style="max-height: 250px; object-fit: contain;"  /></span></a>
 						</div>
 					</div>
 				</div>
@@ -54,9 +54,9 @@
 						</header>
 						<p>A Python Script which joins Zoom Meetings on time<p>
 					</div>
-					<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/zac.png" alt="Zoom Auto Cconnect"
-									style="max-height: 250px; object-fit: contain;" /></span>
+					<div class="col-6 col-12-medium imp-medium,img-hover-zoom--brightness img">
+							<a href="https://github.com/santacodes/zoomautoconnect"><span class="image fit"><img src="images/zac.png" alt="Zoom Auto Cconnect"
+									style="max-height: 250px; object-fit: contain;" /></span></a>
 					</div>
 				</div>
 			</div>
@@ -73,9 +73,9 @@
 						</header>
 						<p>Chat CLI scrpit using Python and Socket<p>
 					</div>
-					<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/web.png" alt="Ardox"
-									style="max-height: 250px; object-fit: contain;" /></span>
+					<div class="col-6 col-12-medium imp-medium,img-hover-zoom--brightness img">
+							<a href="https://github.com/santacodes/socketchat"><span class="image fit"><img src="images/web.png" alt="Ardox"
+									style="max-height: 250px; object-fit: contain;" /></span></a>
 					</div>
 				</div>
 			</div>
@@ -91,24 +91,24 @@
 						<h2>My Other Socials</h2>
 					</header>
 					<div class="row gtr-150">
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/fiverr.png" alt="Fiverr" style="max-height: 110px; object-fit: contain;" /></span>
+						<div class="col-4 col-12-medium,img-hover-zoom--brightness img">
+							<a href="https://www.fiverr.com/santacodes?public_mode=true"><span class="image fit"><img src="images/fiverr.png" alt="Fiverr" style="max-height: 110px; object-fit: contain;" /></span></a>
 							<h3 style="color: #fff;">Fiverr</h3>
 							<ul class="actions special">
 								<li><a href="https://www.fiverr.com/santacodes?public_mode=true" class="button">Visit</a></li>
 							</ul>
 						</div>
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/linkedin.png" alt="Ardox"
-									style="max-height: 220px; object-fit: contain;" /></span>
+						<div class="col-4 col-12-medium,img-hover-zoom--brightness img">
+							<a href="https://www.linkedin.com/in/santhosh-sundaram-897324204"><span class="image fit"><img src="images/linkedin.png" alt="Ardox"
+									style="max-height: 220px; object-fit: contain;" /></span></a>
 							<h3 style="color: #fff;">LinkedIn</h3>
 							<ul class="actions special">
 								<li><a href="https://www.linkedin.com/in/santhosh-sundaram-897324204" class="button">Visit</a></li>
 							</ul>
 						</div>
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/github.png" alt="Ardox"
-									style="max-height: 2240px; object-fit: contain;" /></span>
+						<div class="col-4 col-12-medium,img-hover-zoom--brightness img">
+							<a href="https://github.com/santacodes"><span class="image fit"><img src="images/github.png" alt="Ardox"
+									style="max-height: 2240px; object-fit: contain;" /></span></a>
 							<h3 style="color: #fff;">GitHub</h3>
 							<ul class="actions special">
 								<li><a href="https://github.com/santacodes" class="button" >Visit</a></li>
