--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header" >
 				<div class="inner">
-					<span><img src="./images/header.png"></span>
+					<span><img src="./images/header.png" width='200px' height='200px'></span>
 					<h1>Hey There! I'm <strong>Santhosh</strong> and I love programming!<br />
 					Checkout my <a href="#three">Stuff</a>.</h1>
 					<ul class="actions special">
