--- a/index.html
+++ b/index.html
@@ -49,6 +49,25 @@
 				<div class="row gtr-150">
 					<div class="col-6 col-12-medium">
 						<header class="major">
+							<h2><a href="https://github.com/santacodes/authwall">Authwall</a><br />
+							</h2>
+						</header>
+						<p>An Authentication System with GUI<p>
+					</div>
+					<div class="col-6 col-12-medium imp-medium, img-hover-zoom--brightness img">
+							<a href="https://github.com/santacodes/authwall"><span class="image fit"><img src="images/authwall.png" alt="Zoom Auto Cconnect"
+									style="max-height: 250px; object-fit: contain;" /></span></a>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- Three -->
+		<section id="one" class="main style1">
+			<div class="container">
+				<div class="row gtr-150">
+					<div class="col-6 col-12-medium">
+						<header class="major">
 							<h2><a href="https://github.com/santacodes/zoomautoconnect">Zoom Auto Connect</a><br />
 							</h2>
 						</header>
@@ -62,7 +81,7 @@
 			</div>
 		</section>
 
-		<!-- Three -->
+		<!-- Four -->
 		<section id="one" class="main style1">
 			<div class="container">
 				<div class="row gtr-150">
@@ -81,10 +100,7 @@
 			</div>
 		</section>
 
-
-
-
-		<!-- Four -->
+		<!-- Five -->
 			<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
@@ -118,7 +134,7 @@
 				</div>
 			</section>
 
-		<!-- Five -->
+		<!-- Six -->
 		<!--
 			<section id="five" class="main style1">
 				<div class="container">
