--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<h2><a href="https://github.com/santacodes/authwall">Authwall</a><br />
 							</h2>
 						</header>
-						<p>An Authentication System with GUI<p>
+						<p>An Authentication System with GUI, MYSQL, HASH Function and more<p>
 					</div>
 					<div class="col-6 col-12-medium imp-medium, img-hover-zoom--brightness img">
 							<a href="https://github.com/santacodes/authwall"><span class="image fit"><img src="images/authwall.png" alt="Zoom Auto Cconnect"
