--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<head>
 		<title>Santacodes</title>
 		<link rel="icon" href="./favicon.ico" />
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,6 +26,25 @@
 				</div>
 			</section>
 
+
+		<!--- Recent --->
+		<section id="one" class="main style1" >
+			<div class="container">
+				<div class="row gtr-150">
+					<div class="col-6 col-12-medium">
+						<header class="major">
+							<h2><a href="https://github.com/santacodes/carbonfootprint">Carbon Footprint</a><br />
+							</h2>
+						</header>
+						<p>An Open Source Chrome Extension to detect the amount of Carbon Footprint you left while surfing the internet on your browser.<p>
+							<a href="https://devpost.com/software/carbon-footprint-extension">Devpost Link</a>
+					</div>
+					<div class="col-6 col-12-medium imp-medium, img-hover-zoom--brightness img">
+						<a href="https://github.com/santacodes/ardox"><span class="image fit"><img src="images/ardox.png" alt="Ardox" style="max-height: 250px; object-fit: contain;"  /></span></a>
+					</div>
+				</div>
+			</div>
+		</section>
 		<!-- One -->
 			<section id="one" class="main style1" >
 				<div class="container">
