added carbon footprint

--- a/index.html
+++ b/index.html
@@ -3,159 +3,181 @@
 
 -->
 <html>
-	<head>
-		<title>Santacodes</title>
-		<link rel="icon" href="./favicon.ico" />
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload" style="background-color: #36454f;">
 
-		<!-- Header -->
-			<section id="header" >
-				<div class="inner">
-					<span><img src="./images/header.png" width='200px' height='200px'></span>
-					<h1>Hey There! I'm <strong>Santhosh</strong> and I love programming!<br />
-					Checkout my <a href="#three">Stuff</a>.</h1>
+<head>
+	<title>Santacodes</title>
+	<link rel="icon" href="./favicon.ico" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
+
+<body class="is-preload" style="background-color: #36454f;">
+
+	<!-- Header -->
+	<section id="header">
+		<div class="inner">
+			<span><img src="./images/header.png" width='200px' height='200px'></span>
+			<h1>Hey There! I'm <strong>Santhosh</strong> and I love programming!<br />
+				Checkout my <a href="#three">Stuff</a>.</h1>
+			<ul class="actions special">
+				<li><a href="#one" class="button scrolly">My Projects</a></li>
+			</ul>
+		</div>
+	</section>
+
+
+	<!--- Recent --->
+	<section id="one" class="main style1">
+		<div class="container">
+			<div class="row gtr-150">
+				<div class="col-6 col-12-medium">
+					<header class="major">
+						<h2><a href="https://github.com/santacodes/carbonfootprint">Carbon Footprint</a><br />
+						</h2>
+					</header>
+					<p>An Open Source Chrome Extension to detect the amount of Carbon Footprint you left while surfing
+						the internet on your browser.
+					<p>
+						<a class="btn btn-primary" href="https://devpost.com/software/carbon-footprint-extension"
+							target="_blank" rel="noopener noreferrer" role="button">Devpost Link</a>
+				</div>
+				<div class="col-6 col-12-medium imp-medium, img-hover-zoom--brightness img">
+					<a href="https://github.com/santacodes/ardox"><span class="image fit"><img
+								src="images/footprint.png" alt="Ardox"
+								style="max-height: 250px; object-fit: contain;" /></span></a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- One -->
+	<section id="one" class="main style1">
+		<div class="container">
+			<div class="row gtr-150">
+				<div class="col-6 col-12-medium">
+					<header class="major">
+						<h2><a href="https://github.com/santacodes/ardox">Ardox</a><br />
+						</h2>
+					</header>
+					<p>An Open Source Discord Moderation Bot with feature like auto-roles, react roles, modmail,
+						moderation tools and much more...
+					<p>
+				</div>
+				<div class="col-6 col-12-medium imp-medium, img-hover-zoom--brightness img">
+					<a href="https://github.com/santacodes/ardox"><span class="image fit"><img src="images/ardox.png"
+								alt="Ardox" style="max-height: 250px; object-fit: contain;" /></span></a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Two -->
+	<section id="one" class="main style1">
+		<div class="container">
+			<div class="row gtr-150">
+				<div class="col-6 col-12-medium">
+					<header class="major">
+						<h2><a href="https://github.com/santacodes/authwall">Authwall</a><br />
+						</h2>
+					</header>
+					<p>An Authentication System with GUI, MYSQL, HASH Function and more
+					<p>
+				</div>
+				<div class="col-6 col-12-medium imp-medium, img-hover-zoom--brightness img">
+					<a href="https://github.com/santacodes/authwall"><span class="image fit"><img
+								src="images/authwall.png" alt="Zoom Auto Cconnect"
+								style="max-height: 250px; object-fit: contain;" /></span></a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Three -->
+	<section id="one" class="main style1">
+		<div class="container">
+			<div class="row gtr-150">
+				<div class="col-6 col-12-medium">
+					<header class="major">
+						<h2><a href="https://github.com/santacodes/zoomautoconnect">Zoom Auto Connect</a><br />
+						</h2>
+					</header>
+					<p>A Python Script which joins Zoom Meetings on time
+					<p>
+				</div>
+				<div class="col-6 col-12-medium imp-medium, img-hover-zoom--brightness img">
+					<a href="https://github.com/santacodes/zoomautoconnect"><span class="image fit"><img
+								src="images/zac.png" alt="Zoom Auto Cconnect"
+								style="max-height: 250px; object-fit: contain;" /></span></a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Four -->
+	<section id="one" class="main style1">
+		<div class="container">
+			<div class="row gtr-150">
+				<div class="col-6 col-12-medium">
+					<header class="major">
+						<h2><a href="https://github.com/santacodes/socketchat">SocketChat</a><br />
+						</h2>
+					</header>
+					<p>Chat CLI scrpit using Python and Socket
+					<p>
+				</div>
+				<div class="col-6 col-12-medium imp-medium, img-hover-zoom--brightness img">
+					<a href="https://github.com/santacodes/socketchat"><span class="image fit"><img src="images/web.png"
+								alt="Ardox" style="max-height: 250px; object-fit: contain;" /></span></a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Five -->
+	<section id="three" class="main style1 special">
+		<div class="container">
+			<header class="major">
+				<h2>My Other Socials</h2>
+			</header>
+			<div class="row gtr-150">
+				<div class="col-4 col-12-medium, img-hover-zoom--brightness img">
+					<a href="https://www.fiverr.com/santacodes?public_mode=true"><span class="image fit"><img
+								src="images/fiverr.png" alt="Fiverr"
+								style="max-height: 110px; object-fit: contain;" /></span></a>
+					<h3 style="color: #fff;">Fiverr</h3>
 					<ul class="actions special">
-						<li><a href="#one" class="button scrolly">My Projects</a></li>
+						<li><a href="https://www.fiverr.com/santacodes?public_mode=true" class="button">Visit</a></li>
 					</ul>
 				</div>
-			</section>
-
-
-		<!--- Recent --->
-		<section id="one" class="main style1" >
-			<div class="container">
-				<div class="row gtr-150">
-					<div class="col-6 col-12-medium">
-						<header class="major">
-							<h2><a href="https://github.com/santacodes/carbonfootprint">Carbon Footprint</a><br />
-							</h2>
-						</header>
-						<p>An Open Source Chrome Extension to detect the amount of Carbon Footprint you left while surfing the internet on your browser.<p>
-							<a href="https://devpost.com/software/carbon-footprint-extension">Devpost Link</a>
-					</div>
-					<div class="col-6 col-12-medium imp-medium, img-hover-zoom--brightness img">
-						<a href="https://github.com/santacodes/ardox"><span class="image fit"><img src="images/ardox.png" alt="Ardox" style="max-height: 250px; object-fit: contain;"  /></span></a>
-					</div>
+				<div class="col-4 col-12-medium, img-hover-zoom--brightness img">
+					<a href="https://www.linkedin.com/in/santhosh-sundaram-897324204"><span class="image fit"><img
+								src="images/linkedin.png" alt="Ardox"
+								style="max-height: 220px; object-fit: contain;" /></span></a>
+					<h3 style="color: #fff;">LinkedIn</h3>
+					<ul class="actions special">
+						<li><a href="https://www.linkedin.com/in/santhosh-sundaram-897324204" class="button">Visit</a>
+						</li>
+					</ul>
+				</div>
+				<div class="col-4 col-12-medium, img-hover-zoom--brightness img">
+					<a href="https://github.com/santacodes"><span class="image fit"><img src="images/github.png"
+								alt="Ardox" style="max-height: 2240px; object-fit: contain;" /></span></a>
+					<h3 style="color: #fff;">GitHub</h3>
+					<ul class="actions special">
+						<li><a href="https://github.com/santacodes" class="button">Visit</a></li>
+					</ul>
 				</div>
 			</div>
-		</section>
-		<!-- One -->
-			<section id="one" class="main style1" >
-				<div class="container">
-					<div class="row gtr-150">
-						<div class="col-6 col-12-medium">
-							<header class="major">
-								<h2><a href="https://github.com/santacodes/ardox">Ardox</a><br />
-								</h2>
-							</header>
-							<p>An Open Source Discord Moderation Bot with feature like auto-roles, react roles, modmail, moderation tools and much more...<p>
-						</div>
-						<div class="col-6 col-12-medium imp-medium, img-hover-zoom--brightness img">
-							<a href="https://github.com/santacodes/ardox"><span class="image fit"><img src="images/ardox.png" alt="Ardox" style="max-height: 250px; object-fit: contain;"  /></span></a>
-						</div>
-					</div>
-				</div>
-			</section>
+		</div>
+	</section>
 
-		<!-- Two -->
-		<section id="one" class="main style1">
-			<div class="container">
-				<div class="row gtr-150">
-					<div class="col-6 col-12-medium">
-						<header class="major">
-							<h2><a href="https://github.com/santacodes/authwall">Authwall</a><br />
-							</h2>
-						</header>
-						<p>An Authentication System with GUI, MYSQL, HASH Function and more<p>
-					</div>
-					<div class="col-6 col-12-medium imp-medium, img-hover-zoom--brightness img">
-							<a href="https://github.com/santacodes/authwall"><span class="image fit"><img src="images/authwall.png" alt="Zoom Auto Cconnect"
-									style="max-height: 250px; object-fit: contain;" /></span></a>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<!-- Three -->
-		<section id="one" class="main style1">
-			<div class="container">
-				<div class="row gtr-150">
-					<div class="col-6 col-12-medium">
-						<header class="major">
-							<h2><a href="https://github.com/santacodes/zoomautoconnect">Zoom Auto Connect</a><br />
-							</h2>
-						</header>
-						<p>A Python Script which joins Zoom Meetings on time<p>
-					</div>
-					<div class="col-6 col-12-medium imp-medium, img-hover-zoom--brightness img">
-							<a href="https://github.com/santacodes/zoomautoconnect"><span class="image fit"><img src="images/zac.png" alt="Zoom Auto Cconnect"
-									style="max-height: 250px; object-fit: contain;" /></span></a>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<!-- Four -->
-		<section id="one" class="main style1">
-			<div class="container">
-				<div class="row gtr-150">
-					<div class="col-6 col-12-medium">
-						<header class="major">
-							<h2><a href="https://github.com/santacodes/socketchat">SocketChat</a><br />
-							</h2>
-						</header>
-						<p>Chat CLI scrpit using Python and Socket<p>
-					</div>
-					<div class="col-6 col-12-medium imp-medium, img-hover-zoom--brightness img">
-							<a href="https://github.com/santacodes/socketchat"><span class="image fit"><img src="images/web.png" alt="Ardox"
-									style="max-height: 250px; object-fit: contain;" /></span></a>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<!-- Five -->
-			<section id="three" class="main style1 special">
-				<div class="container">
-					<header class="major">
-						<h2>My Other Socials</h2>
-					</header>
-					<div class="row gtr-150">
-						<div class="col-4 col-12-medium, img-hover-zoom--brightness img">
-							<a href="https://www.fiverr.com/santacodes?public_mode=true"><span class="image fit"><img src="images/fiverr.png" alt="Fiverr" style="max-height: 110px; object-fit: contain;" /></span></a>
-							<h3 style="color: #fff;">Fiverr</h3>
-							<ul class="actions special">
-								<li><a href="https://www.fiverr.com/santacodes?public_mode=true" class="button">Visit</a></li>
-							</ul>
-						</div>
-						<div class="col-4 col-12-medium, img-hover-zoom--brightness img">
-							<a href="https://www.linkedin.com/in/santhosh-sundaram-897324204"><span class="image fit"><img src="images/linkedin.png" alt="Ardox"
-									style="max-height: 220px; object-fit: contain;" /></span></a>
-							<h3 style="color: #fff;">LinkedIn</h3>
-							<ul class="actions special">
-								<li><a href="https://www.linkedin.com/in/santhosh-sundaram-897324204" class="button">Visit</a></li>
-							</ul>
-						</div>
-						<div class="col-4 col-12-medium, img-hover-zoom--brightness img">
-							<a href="https://github.com/santacodes"><span class="image fit"><img src="images/github.png" alt="Ardox"
-									style="max-height: 2240px; object-fit: contain;" /></span></a>
-							<h3 style="color: #fff;">GitHub</h3>
-							<ul class="actions special">
-								<li><a href="https://github.com/santacodes" class="button" >Visit</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</section>
-
-		<!-- Six -->
-		<!--
+	<!-- Six -->
+	<!--
 			<section id="five" class="main style1">
 				<div class="container">
 					<header class="major special">
@@ -472,22 +494,25 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</section>
 		-->
 
-		<!-- Footer -->
-			<section id="footer">
-				<ul class="icons">
-					<li><a href="https://github.com/santacodes" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="mailto:santhoshsundaram9650@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
-				
-			</section>
+	<!-- Footer -->
+	<section id="footer">
+		<ul class="icons">
+			<li><a href="https://github.com/santacodes" class="icon brands alt fa-github"><span
+						class="label">GitHub</span></a></li>
+			<li><a href="mailto:santhoshsundaram9650@gmail.com" class="icon solid alt fa-envelope"><span
+						class="label">Email</span></a></li>
+		</ul>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	</section>
 
-	</body>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
